DOC: Add sns icons

--- a/makedocs/source/_templates/layout.html
+++ b/makedocs/source/_templates/layout.html
@@ -13,12 +13,17 @@
   gtag('config', 'UA-108824439-3');
 </script>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 {% endblock %}
 
 {%- block footer %}
 <footer class="footer">
   <div class="container">
     <p class="pull-right">
+      <a class="fa fa-facebook" href="https://www.facebook.com/sharer/sharer.php?u=https://lifelib.io" target="_blank"></a>
+      <a class="fa fa-twitter" href="https://twitter.com/intent/tweet?text=lifelib:%20Actuarial%20models%20in%20Python%0Ahttps://lifelib.io" target="_blank"></a>
+      <a class="fa fa-linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url=https://lifelib.io" target="_blank"></a>
       <a href="#">Back to top</a>
       {% if theme_source_link_position == "footer" %}
         <br/>
